# parallel-woamm

./: .RData  .Rhistory  .gitignore  README.MD  analysis.Rmd  justfile  result.csv  test.Rmd
cuda/: CMakeLists.txt  MRG32k3a  MRG32k3a.cu  MTGP32  MTGP32.cu  makefile  philox4  philox4.cu  run.sh
cuda/lib/: mpgp32.h
cuda/src/: main.cpp  main.cu  runner.cpp  runner.cu  runner.h
cuda/src/func/: func.cu  func.h
cuda/src/oa/: oa.cu  oa.h
presentation/: prezi.md
proposal/: makefile  ref.bib  woa_proposal.md  woa_proposal.tex
report/: Makefile  bevan_report.bib  bevan_report.tex
report/img/: bubble-net.eps  fitness.eps  speed_up.eps
sequential/: CMakeLists.txt  Doxyfile  run.sh
sequential/lib/: mt64.h
sequential/src/: main.cpp  runner.cpp  runner.h
sequential/src/data/: data_stats.cpp  data_stats.h
sequential/src/func/: func.cpp  func.h
sequential/src/population/: population.cpp  population.h
sequential/src/whale/: woam.cpp  woam.h
